Add Operator to Read the Newest Version of an Object (#746)
* Add Operator for pulling newest version

* fix naming

* naming and whitespace

* fix typing

* remove null check

* let/const

* remove unneeded else

* Use null coalesce operator

Co-authored-by: robertSt7 <104770750+robertSt7@users.noreply.github.com>

* add js to twig.

* Update export.yaml

---------

Co-authored-by: robertSt7 <104770750+robertSt7@users.noreply.github.com>

--- a/.github/ci/files/config/export.yaml
+++ b/.github/ci/files/config/export.yaml
@@ -248,6 +248,13 @@ services:
         tags:
             - { name: pimcore.data_object.grid_column_config.operator_factory, id: Alias }
 
+    pimcore.data_object.grid_column_config.operator.factory.versiongetter:
+        class: Pimcore\Bundle\AdminBundle\DataObject\GridColumnConfig\Operator\Factory\DefaultOperatorFactory
+        arguments:
+            $className: Pimcore\Bundle\AdminBundle\DataObject\GridColumnConfig\Operator\VersionGetter
+        tags:
+            - { name: pimcore.data_object.grid_column_config.operator_factory, id: VersionGetter }
+
     pimcore.data_object.grid_column_config.operator.factory.workflowstate:
         class: Pimcore\Bundle\AdminBundle\DataObject\GridColumnConfig\Operator\Factory\WorkflowStateFactory
         tags:
